--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,11 @@
 /* GLOBAL STYLES
 -------------------------------------------------- */
-/* Special class on .container surrounding .navbar, used for positioning it into place. */
-.navbar-wrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 20;
-  border-radius: 10;
-}
+/* Padding below the footer and lighter body text */
 
-/* Flip around the padding for proper display in narrow viewports */
-.navbar-wrapper > .container {
-  padding-right: 0;
-  padding-left: 0;
-}
-.navbar-wrapper .navbar {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-.navbar-wrapper .navbar .container {
-  width: auto;
+body {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  color: #5a5a5a;
 }
 
 
@@ -29,27 +14,25 @@
 
 /* Carousel base class */
 .carousel {
-  height: 500px;
-  margin-bottom: 60px;
+  margin-bottom: 4rem;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
+  bottom: 3rem;
   z-index: 10;
 }
 
 /* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 500px;
+.carousel-item {
+  height: 32rem;
   background-color: #777;
-  margin: auto auto ;
-
 }
-.carousel-inner > .item > img {
-  position: relative;
+.carousel-item > img {
+  position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 600px;
+  height: 32rem;
 }
 
 
@@ -70,16 +53,18 @@
 }
 
 
-/*gestion des images
--------------------------------------------------- */
+/* Featurettes
+------------------------- */
 
-img{
-    display: block;
-    margin: center center;
+.featurette-divider {
+  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
 }
 
-.thumbnail{
-  padding-top: 5px;
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -.05rem;
 }
 
 
@@ -103,11 +88,23 @@ img{
   .featurette-heading {
     margin-top: 7rem;
   }
+ul.share-buttons{
+  list-style: none;
+  padding: 0;
 }
 
-.share-buttons a{
-    border: solid black 1px;
-    float: left;
-  
-    padding-bottom: 1em;
+ul.share-buttons li{
+  display: inline;
+}
+
+ul.share-buttons .sr-only{
+  position: absolute;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0;
+  border: 0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
 }
