--- a/css/style.css
+++ b/css/style.css
@@ -52,18 +52,19 @@ input, textarea {
   z-index: 10;
 }
 
-/* Declare heights because of positioning of img element */
-.carousel-item {
+/* Declare heights because of positioning of img element*/
+./*carousel-item {
   height: 32rem;
-  background-color: #777;
+  background-color: #777;*/
 }
 .carousel-item > img {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   min-width: 100%;
   height: 32rem;
 }
+
 
 
 /* MARKETING CONTENT
