--- a/css/style.css
+++ b/css/style.css
@@ -43,28 +43,28 @@ input, textarea {
 -------------------------------------------------- */
 
 /* Carousel base class */
-.carousel {
+/*.carousel {
   margin-bottom: 4rem;
 }
-/* Since positioning the image, we need to help out the caption */
+ Since positioning the image, we need to help out the caption 
 .carousel-caption {
   bottom: 3rem;
   z-index: 10;
 }
-
+*/
 /* Declare heights because of positioning of img element*/
 ./*carousel-item {
   height: 32rem;
   background-color: #777;*/
 }
-.carousel-item > img {
+/*.carousel-item > img {
   position: relative;
   top: 0;
   left: 0;
   min-width: 100%;
   height: 32rem;
 }
-
+*/
 
 
 /* MARKETING CONTENT
@@ -143,16 +143,26 @@ ul.share-buttons .sr-only{
   display: block;
 }
 
-div.deux-personnes{
+.deux-personnes{
+    border: solid red 1px;
+
   float: right;
   margin-bottom: 20px;
+  margin-right: 20%;
+  padding-right: 8%;
 }
-div.quatre-personnes{
+.quatre-personnes{
+    border: solid yellow 1px;
+
   float: right;
   margin-bottom: 20px;
+  margin-right: 20%;
+  padding-right: 8%;
 }
-div.six-personnes{
+.six-personnes{
+  border: solid black 1px;
   float: right;
+  padding-right: 12%;
+  margin-right: 20%;
 }
 
-}
