--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@ body {
 form { 
   font-family: sans-serif; 
 }
+legend{
+  text-align: center;
+}
 
  
 input, textarea { 
@@ -43,28 +46,29 @@ input, textarea {
 -------------------------------------------------- */
 
 /* Carousel base class */
-/*.carousel {
-  margin-bottom: 4rem;
+.carousel {
+  margin-bottom: 4%;
 }
- Since positioning the image, we need to help out the caption 
-.carousel-caption {
+ /*Since positioning the image, we need to help out the caption */
+/*.carousel-caption {
   bottom: 3rem;
   z-index: 10;
+}*/
+
+ /*Declare heights because of positioning of img element*/
+.item {
+  height: 40rem;
+  width: 200rem;
+ 
 }
-*/
-/* Declare heights because of positioning of img element*/
-./*carousel-item {
-  height: 32rem;
-  background-color: #777;*/
-}
+
 /*.carousel-item > img {
   position: relative;
   top: 0;
   left: 0;
   min-width: 100%;
   height: 32rem;
-}
-*/
+}*/
 
 
 /* MARKETING CONTENT
@@ -81,6 +85,17 @@ input, textarea {
 .marketing .col-lg-4 p {
   margin-right: .75rem;
   margin-left: .75rem;
+}
+
+.img-card{
+
+  text-align: center;
+  margin-bottom: 0.5%;
+  /*background-color: #CCC5AF;*/
+}
+body{
+ /* background-color: #403E3D;*/
+  font-color: white;
 }
 
 
@@ -138,31 +153,49 @@ ul.share-buttons .sr-only{
   width: 1px;
   overflow: hidden;
 }
+
 .pull-right{
-  text-align: right;
+  text-align: center;
   display: block;
 }
 
-.deux-personnes{
-    border: solid red 1px;
 
-  float: right;
-  margin-bottom: 20px;
-  margin-right: 20%;
-  padding-right: 8%;
+.calendrier{
+  border: solid blue 1px;
+}
+.plan_restaurant{
+
+  margin-top: 10%;
+}
+
+.legend_restaurant{
+
+  margin-top: 5%
+}
+
+.deux-personnes{
+
+/*  display: block;
+*//*  float: right;
+*/  margin-bottom: 20px;
+  margin-right: 25%;
+  /*padding-right: 8%;*/
 }
 .quatre-personnes{
-    border: solid yellow 1px;
 
-  float: right;
-  margin-bottom: 20px;
-  margin-right: 20%;
-  padding-right: 8%;
+
+/*  float: right;
+*/  margin-bottom: 20px;
+  margin-right: 25%;
+  /*padding-right: 8%;*/
 }
 .six-personnes{
-  border: solid black 1px;
-  float: right;
-  padding-right: 12%;
-  margin-right: 20%;
+ 
+/*  float: right;
+*/  padding-right: 15%;
+  margin-right: 25%;
 }
+.barre{
+  border: solid green 1px;
 
+}
