img carte et reseaux css

--- a/css/style.css
+++ b/css/style.css
@@ -206,3 +206,13 @@ ul.share-buttons .sr-only{
   border: solid green 1px;
 
 }
+.size{
+  width: 70%;
+  height: 70%;
+}
+.reseaux{
+  display: block;
+   text-align: center;
+   margin-bottom: 5%;
+   margin-top: 5%;
+}
