--- a/css/style.css
+++ b/css/style.css
@@ -216,3 +216,10 @@ ul.share-buttons .sr-only{
    margin-bottom: 5%;
    margin-top: 5%;
 }
+.copy
+{
+  margin-top: 2%;
+}
+.img-division{
+margin-top: 5%;
+}
